--- a/BW_Mobile/BW_Mobile/Properties/Resources.en.resx
+++ b/BW_Mobile/BW_Mobile/Properties/Resources.en.resx
@@ -118,247 +118,247 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="Credits_Debugging" xml:space="preserve">
-    <value>测试</value>
+    <value>Debugging</value>
     <comment>测试</comment>
   </data>
   <data name="Credits_GameDesign" xml:space="preserve">
-    <value>游戏设计</value>
+    <value>Game Design</value>
     <comment>游戏设计</comment>
   </data>
   <data name="Credits_Programming" xml:space="preserve">
-    <value>程序</value>
+    <value>Programming</value>
     <comment>程序</comment>
   </data>
   <data name="Credits_Title" xml:space="preserve">
-    <value>制作人员名单</value>
+    <value>Credits</value>
     <comment>制作人员名单</comment>
   </data>
   <data name="Credits_Translating" xml:space="preserve">
-    <value>翻译</value>
+    <value>Translating</value>
     <comment>翻译</comment>
   </data>
   <data name="GameName" xml:space="preserve">
-    <value>黑白</value>
+    <value>Black White</value>
     <comment>黑白</comment>
   </data>
   <data name="GamePage_LeftClicks" xml:space="preserve">
-    <value>剩余步数</value>
+    <value>Clicks</value>
     <comment>剩余步数</comment>
   </data>
   <data name="GamePage_MsgBox_NextNewGame" xml:space="preserve">
-    <value>再来一局</value>
+    <value>New Game</value>
     <comment>再来一局</comment>
   </data>
   <data name="GamePage_Msg_NewGame" xml:space="preserve">
-    <value>你确定要开始新游戏吗?</value>
+    <value>Are you sure you are going to have a new game?</value>
     <comment>你确定要开始新游戏吗?</comment>
   </data>
   <data name="GamePage_Msg_Perfect_Lose" xml:space="preserve">
-    <value>你失败了%1%你还可以尝试继续完成游戏</value>
+    <value>You can continue to slove this game.</value>
     <comment>你失败了%1(换行)%你还可以尝试继续完成游戏</comment>
   </data>
   <data name="GamePage_Msg_Perfect_Win" xml:space="preserve">
-    <value>你胜利了!%1%总共用了%2%步%1%还剩%3%步</value>
+    <value>Used clicks: %2%%1%Left clicks: %3%</value>
     <comment>你胜利了!%1(换行)%总共用了%2%步%1(换行)%还剩%3%步</comment>
   </data>
   <data name="GamePage_Msg_Standard_Win" xml:space="preserve">
-    <value>你胜利了!%1%总共用了%2%步</value>
+    <value>Used clicks: %2%</value>
     <comment>你胜利了!%1(换行)%总共用了%2%步</comment>
   </data>
   <data name="GamePage_Msg_Title_GameEnd_Lose" xml:space="preserve">
-    <value>游戏结束</value>
+    <value>Game Over</value>
     <comment>游戏结束</comment>
   </data>
   <data name="GamePage_Msg_Title_GameEnd_Win" xml:space="preserve">
-    <value>游戏结束</value>
+    <value>You win!</value>
     <comment>游戏结束</comment>
   </data>
   <data name="GamePage_NewGame" xml:space="preserve">
-    <value>开始新游戏</value>
+    <value>New Game</value>
     <comment>开始新游戏</comment>
   </data>
   <data name="GamePage_Small" xml:space="preserve">
-    <value>你的屏幕/窗口太小了</value>
+    <value>This screen or window is too small.</value>
     <comment>你的屏幕/窗口太小了</comment>
   </data>
   <data name="GamePage_State_Lose" xml:space="preserve">
-    <value>你失败了</value>
+    <value>Game Over</value>
     <comment>你失败了</comment>
   </data>
   <data name="GamePage_State_NoResult" xml:space="preserve">
-    <value>未完成</value>
+    <value>Playing</value>
     <comment>未完成</comment>
   </data>
   <data name="GamePage_State_Win" xml:space="preserve">
-    <value>你胜利了</value>
+    <value>You Win</value>
     <comment>你胜利了</comment>
   </data>
   <data name="GamePage_Title_Perfect_NoResult" xml:space="preserve">
-    <value>剩余步数: %1%</value>
+    <value>Left clicks: %1%</value>
     <comment>剩余步数: %1%</comment>
   </data>
   <data name="GamePage_Title_Perfect_Win" xml:space="preserve">
-    <value>胜利! 剩余步数: %1%</value>
+    <value>You win! Left clicks: %1%</value>
     <comment>胜利! 剩余步数: %1%</comment>
   </data>
   <data name="GamePage_Title_Standard_NoResult" xml:space="preserve">
-    <value>已用步数: %1%</value>
+    <value>Used clicks: %1%</value>
     <comment>已用步数: %1%</comment>
   </data>
   <data name="GamePage_Title_Standard_Win" xml:space="preserve">
-    <value>胜利! 已用步数: %1%</value>
+    <value>You win! Used clicks: %1%</value>
     <comment>胜利! 已用步数: %1%</comment>
   </data>
   <data name="GamePage_UsedClicks" xml:space="preserve">
-    <value>已用步数</value>
+    <value>Clicks</value>
     <comment>已用步数</comment>
   </data>
   <data name="HelpPage_Title" xml:space="preserve">
-    <value>帮助</value>
+    <value>Help</value>
     <comment>帮助</comment>
   </data>
   <data name="MainPage_Debug" xml:space="preserve">
-    <value>调试信息</value>
-    <comment>调试信息</comment>
-  </data>
-  <data name="MainPage_Help" xml:space="preserve">
-    <value>帮助</value>
+    <value>Debug Information</value>
     <comment>帮助</comment>
   </data>
+  <data name="MainPage_Help" xml:space="preserve">
+    <value>Help</value>
+    <comment>设置</comment>
+  </data>
   <data name="MainPage_Language" xml:space="preserve">
-    <value>语言</value>
+    <value>Language</value>
     <comment>语言</comment>
   </data>
   <data name="MainPage_Language_System" xml:space="preserve">
-    <value>跟随系统</value>
+    <value>Auto</value>
     <comment>跟随系统</comment>
   </data>
   <data name="MainPage_Settings" xml:space="preserve">
-    <value>设置</value>
-    <comment>设置</comment>
-  </data>
-  <data name="MainPage_Start" xml:space="preserve">
-    <value>开始</value>
+    <value>Settings</value>
     <comment>开始</comment>
   </data>
-  <data name="MainPage_Statistics" xml:space="preserve">
-    <value>统计数据</value>
+  <data name="MainPage_Start" xml:space="preserve">
+    <value>Start</value>
     <comment>统计数据</comment>
   </data>
+  <data name="MainPage_Statistics" xml:space="preserve">
+    <value>Statistics</value>
+    <comment>调试信息</comment>
+  </data>
   <data name="MainPage_Tips" xml:space="preserve">
-    <value>若此页内容不能正常显示,请旋转屏幕</value>
+    <value>If this page looks strange, rotate your screen.</value>
     <comment>若此页内容不能正常显示,请旋转屏幕</comment>
   </data>
   <data name="ModePage_Choose" xml:space="preserve">
-    <value>选择一个游戏模式</value>
+    <value>Choose a gamemode</value>
     <comment>选择一个游戏模式</comment>
   </data>
   <data name="ModePage_Next" xml:space="preserve">
-    <value>继续</value>
+    <value>Continue</value>
     <comment>继续</comment>
   </data>
   <data name="ModePage_Title" xml:space="preserve">
-    <value>选择模式</value>
+    <value>Choose a gamemode</value>
     <comment>选择模式</comment>
   </data>
   <data name="Mode_Perfect" xml:space="preserve">
-    <value>最优解</value>
+    <value>Perfect</value>
     <comment>最优解</comment>
   </data>
   <data name="Mode_Perfect_Info" xml:space="preserve">
-    <value>使用不超过方块总数的步数取得胜利</value>
+    <value>Win the game with limited clicks.</value>
     <comment>使用不超过方块总数的步数取得胜利</comment>
   </data>
   <data name="Mode_Standard" xml:space="preserve">
-    <value>标准模式</value>
+    <value>Standard</value>
     <comment>标准模式</comment>
   </data>
   <data name="Mode_Standard_Info" xml:space="preserve">
-    <value>使用尽可能少的步数取得胜利</value>
+    <value>Win the game with less clicks.</value>
     <comment>使用尽可能少的步数取得胜利</comment>
   </data>
   <data name="MsgBox_Cancel" xml:space="preserve">
-    <value>取消</value>
+    <value>Cancel</value>
     <comment>取消</comment>
   </data>
   <data name="MsgBox_No" xml:space="preserve">
-    <value>否</value>
+    <value>No</value>
     <comment>否</comment>
   </data>
   <data name="MsgBox_OK" xml:space="preserve">
-    <value>确定</value>
+    <value>OK</value>
     <comment>确定</comment>
   </data>
   <data name="MsgBox_Yes" xml:space="preserve">
-    <value>是</value>
+    <value>Yes</value>
     <comment>是</comment>
   </data>
   <data name="SettingsPage_Licence" xml:space="preserve">
-    <value>开放源代码许可</value>
+    <value>Licence</value>
     <comment>开放源代码许可</comment>
   </data>
   <data name="SettingsPage_PortraitOnly" xml:space="preserve">
-    <value>竖屏锁定</value>
+    <value>Portrait Only</value>
     <comment>竖屏锁定</comment>
   </data>
   <data name="SettingsPage_SaveChanges" xml:space="preserve">
-    <value>保存更改</value>
+    <value>Save Changes</value>
     <comment>保存更改</comment>
   </data>
   <data name="SettingsPage_TestMode" xml:space="preserve">
-    <value>测试模式</value>
+    <value>Test Mode</value>
     <comment>测试模式</comment>
   </data>
   <data name="SettingsPage_Title" xml:space="preserve">
-    <value>设置</value>
+    <value>Settings</value>
     <comment>设置</comment>
   </data>
   <data name="SettingsPage_UnsavedChanges" xml:space="preserve">
-    <value>更改未保存</value>
+    <value>Changes Unsaved</value>
     <comment>更改未保存</comment>
   </data>
   <data name="SizePage_Test_Choose" xml:space="preserve">
-    <value>选择尺寸</value>
+    <value>Choose the size of game</value>
     <comment>选择尺寸</comment>
   </data>
   <data name="SizePage_Test_Warn" xml:space="preserve">
-    <value>警告:选择过大的游戏尺寸会使游戏加载时间大幅上升,并且你的屏幕可能不支持这么大的游戏尺寸。</value>
+    <value>Warning: If you choose a large size, it might take a lot of time to load the game, and your screen might be too small to play the large game.</value>
     <comment>警告:选择过大的游戏尺寸会使游戏加载时间大幅上升,并且你的屏幕可能不支持这么大的游戏尺寸。</comment>
   </data>
   <data name="Size_3" xml:space="preserve">
-    <value>经典:3x3</value>
+    <value>3x3</value>
     <comment>经典:3x3</comment>
   </data>
   <data name="Size_4" xml:space="preserve">
-    <value>简单:4x4</value>
+    <value>4x4</value>
     <comment>简单:4x4</comment>
   </data>
   <data name="Size_5" xml:space="preserve">
-    <value>中等:5x5</value>
+    <value>5x5</value>
     <comment>中等:5x5</comment>
   </data>
   <data name="Size_6" xml:space="preserve">
-    <value>困难:6x6</value>
+    <value>6x6</value>
     <comment>困难:6x6</comment>
   </data>
   <data name="Size_7" xml:space="preserve">
-    <value>困难:7x7</value>
+    <value>7x7</value>
     <comment>困难:7x7</comment>
   </data>
   <data name="Size_8" xml:space="preserve">
-    <value>困难:8x8</value>
+    <value>8x8</value>
     <comment>困难:8x8</comment>
   </data>
   <data name="Size_9" xml:space="preserve">
-    <value>中等:9x9</value>
+    <value>9x9</value>
     <comment>中等:9x9</comment>
   </data>
   <data name="Size_Given" xml:space="preserve">
-    <value>任意:_x_</value>
+    <value>Chosen Size</value>
     <comment>任意:_x_</comment>
   </data>
   <data name="Size_Random" xml:space="preserve">
-    <value>随机:?x?</value>
+    <value>Random</value>
     <comment>随机:?x?</comment>
   </data>
 </root>
