--- a/BW_Mobile/BW_Mobile/Properties/Resources.en.resx
+++ b/BW_Mobile/BW_Mobile/Properties/Resources.en.resx
@@ -137,6 +137,26 @@
     <value>Translating</value>
     <comment>翻译</comment>
   </data>
+  <data name="DebugPage_Device" xml:space="preserve">
+    <value>Device</value>
+    <comment>设备信息</comment>
+  </data>
+  <data name="DebugPage_Language" xml:space="preserve">
+    <value>Language</value>
+    <comment>语言</comment>
+  </data>
+  <data name="DebugPage_ScreenSize" xml:space="preserve">
+    <value>Size</value>
+    <comment>屏幕尺寸</comment>
+  </data>
+  <data name="DebugPage_Title" xml:space="preserve">
+    <value>Debug Information</value>
+    <comment>调试信息</comment>
+  </data>
+  <data name="DebugPage_Version" xml:space="preserve">
+    <value>Version</value>
+    <comment>版本</comment>
+  </data>
   <data name="GameName" xml:space="preserve">
     <value>Black White</value>
     <comment>黑白</comment>
@@ -213,9 +233,29 @@
     <value>Clicks</value>
     <comment>已用步数</comment>
   </data>
+  <data name="HelpPage_HowToPlay_Text" xml:space="preserve">
+    <value>Click a block. Then the color of this block and the blocks next to it will be changed.</value>
+    <comment>点击一个格子,它和与它相邻的上下左右(如果有)四个格子变色(黑变白,白变黑)</comment>
+  </data>
+  <data name="HelpPage_HowToPlay_Title" xml:space="preserve">
+    <value>How to play it?</value>
+    <comment>操作方法</comment>
+  </data>
+  <data name="HelpPage_HowToWin_Text" xml:space="preserve">
+    <value>You will win the game when all of the blocks have the same color before you lose the game.</value>
+    <comment>在失败前使所有格子全部变成同一种颜色即可获胜</comment>
+  </data>
+  <data name="HelpPage_HowToWin_Title" xml:space="preserve">
+    <value>How to win a game?</value>
+    <comment>获胜条件</comment>
+  </data>
   <data name="HelpPage_Title" xml:space="preserve">
     <value>Help</value>
     <comment>帮助</comment>
+  </data>
+  <data name="HelpPage_Try" xml:space="preserve">
+    <value>Try</value>
+    <comment>试一试</comment>
   </data>
   <data name="MainPage_Debug" xml:space="preserve">
     <value>Debug Information</value>
