--- a/BlackWhite.App/BlackWhite.App/Properties/GamePage.resx
+++ b/BlackWhite.App/BlackWhite.App/Properties/GamePage.resx
@@ -117,28 +117,43 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Help" xml:space="preserve">
-    <value>帮助</value>
+  <data name="Count" xml:space="preserve">
+    <value>已使用</value>
   </data>
-  <data name="Language" xml:space="preserve">
-    <value>语言</value>
+  <data name="Msg_Button_Cancel" xml:space="preserve">
+    <value>取消</value>
   </data>
-  <data name="LanguageChoose" xml:space="preserve">
-    <value>选择语言</value>
+  <data name="Msg_Button_NewGame" xml:space="preserve">
+    <value>新游戏</value>
   </data>
-  <data name="Preview" xml:space="preserve">
-    <value>预览版本</value>
+  <data name="Msg_Button_OK" xml:space="preserve">
+    <value>确定</value>
   </data>
-  <data name="Settings" xml:space="preserve">
-    <value>设置</value>
+  <data name="Msg_Text_Count" xml:space="preserve">
+    <value>总共使用了{0}步</value>
   </data>
-  <data name="Start" xml:space="preserve">
-    <value>开始</value>
+  <data name="Msg_Text_Finished" xml:space="preserve">
+    <value>你成功完成了游戏</value>
   </data>
-  <data name="Statistics" xml:space="preserve">
-    <value>统计</value>
+  <data name="Msg_Text_NewGame" xml:space="preserve">
+    <value>你确定要开始新游戏吗？</value>
   </data>
-  <data name="Version" xml:space="preserve">
-    <value>版本信息</value>
+  <data name="Msg_Title_Finished" xml:space="preserve">
+    <value>完成！</value>
+  </data>
+  <data name="Msg_Title_NewGame" xml:space="preserve">
+    <value>开始新游戏</value>
+  </data>
+  <data name="NewGame" xml:space="preserve">
+    <value>新游戏</value>
+  </data>
+  <data name="State_Finished" xml:space="preserve">
+    <value>已完成</value>
+  </data>
+  <data name="State_Preparing" xml:space="preserve">
+    <value>生成中</value>
+  </data>
+  <data name="State_Unfinished" xml:space="preserve">
+    <value>未完成</value>
   </data>
 </root>
