--- a/BlackWhite.App/BlackWhite.App/Properties/StatisticsPage.resx
+++ b/BlackWhite.App/BlackWhite.App/Properties/StatisticsPage.resx
@@ -117,28 +117,31 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Help" xml:space="preserve">
-    <value>帮助</value>
+  <data name="All" xml:space="preserve">
+    <value>所有</value>
   </data>
-  <data name="Language" xml:space="preserve">
-    <value>语言</value>
+  <data name="Clicks" xml:space="preserve">
+    <value>点击次数</value>
   </data>
-  <data name="LanguageChoose" xml:space="preserve">
-    <value>选择语言</value>
+  <data name="Games" xml:space="preserve">
+    <value>游戏场数</value>
   </data>
-  <data name="Preview" xml:space="preserve">
-    <value>预览版本</value>
+  <data name="Normal" xml:space="preserve">
+    <value>标准模式</value>
   </data>
-  <data name="Settings" xml:space="preserve">
-    <value>设置</value>
+  <data name="Perfect" xml:space="preserve">
+    <value>最优解</value>
   </data>
-  <data name="Start" xml:space="preserve">
-    <value>开始</value>
+  <data name="Time" xml:space="preserve">
+    <value>总时间</value>
   </data>
-  <data name="Statistics" xml:space="preserve">
-    <value>统计</value>
+  <data name="Timed" xml:space="preserve">
+    <value>计时模式</value>
   </data>
-  <data name="Version" xml:space="preserve">
-    <value>版本信息</value>
+  <data name="Title" xml:space="preserve">
+    <value>统计数据</value>
+  </data>
+  <data name="Wins" xml:space="preserve">
+    <value>胜利场数</value>
   </data>
 </root>
