--- a/BlackWhite.App/BlackWhite.App/Properties/VersionPage.en.resx
+++ b/BlackWhite.App/BlackWhite.App/Properties/VersionPage.en.resx
@@ -117,28 +117,16 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Help" xml:space="preserve">
-    <value>帮助</value>
+  <data name="GameDesigning" xml:space="preserve">
+    <value>Game Designing</value>
+    <comment>游戏设计</comment>
   </data>
-  <data name="Language" xml:space="preserve">
-    <value>语言</value>
+  <data name="Programming" xml:space="preserve">
+    <value>Programming</value>
+    <comment>程序</comment>
   </data>
-  <data name="LanguageChoose" xml:space="preserve">
-    <value>选择语言</value>
-  </data>
-  <data name="Preview" xml:space="preserve">
-    <value>预览版本</value>
-  </data>
-  <data name="Settings" xml:space="preserve">
-    <value>设置</value>
-  </data>
-  <data name="Start" xml:space="preserve">
-    <value>开始</value>
-  </data>
-  <data name="Statistics" xml:space="preserve">
-    <value>统计</value>
-  </data>
-  <data name="Version" xml:space="preserve">
-    <value>版本信息</value>
+  <data name="Testing" xml:space="preserve">
+    <value>Testing</value>
+    <comment>测试</comment>
   </data>
 </root>
