--- a/BlackWhite.App/BlackWhite.App/Properties/GamePage.resx
+++ b/BlackWhite.App/BlackWhite.App/Properties/GamePage.resx
@@ -132,11 +132,20 @@
   <data name="Msg_Text_Count" xml:space="preserve">
     <value>总共使用了{0}步</value>
   </data>
+  <data name="Msg_Text_Fail" xml:space="preserve">
+    <value>你失败了</value>
+  </data>
   <data name="Msg_Text_Finished" xml:space="preserve">
     <value>你成功完成了游戏</value>
   </data>
   <data name="Msg_Text_NewGame" xml:space="preserve">
     <value>你确定要开始新游戏吗？</value>
+  </data>
+  <data name="Msg_Text_Remaining" xml:space="preserve">
+    <value>还剩{0}步</value>
+  </data>
+  <data name="Msg_Title_Fail" xml:space="preserve">
+    <value>游戏结束</value>
   </data>
   <data name="Msg_Title_Finished" xml:space="preserve">
     <value>完成！</value>
@@ -146,6 +155,12 @@
   </data>
   <data name="NewGame" xml:space="preserve">
     <value>新游戏</value>
+  </data>
+  <data name="Remaining" xml:space="preserve">
+    <value>剩余</value>
+  </data>
+  <data name="State_Fail" xml:space="preserve">
+    <value>失败</value>
   </data>
   <data name="State_Finished" xml:space="preserve">
     <value>已完成</value>
