--- a/BlackWhite.App/BlackWhite.App/Properties/VersionPage.resx
+++ b/BlackWhite.App/BlackWhite.App/Properties/VersionPage.resx
@@ -126,4 +126,7 @@
   <data name="Testing" xml:space="preserve">
     <value>测试</value>
   </data>
+  <data name="Translating" xml:space="preserve">
+    <value>翻译</value>
+  </data>
 </root>
