--- a/BlackWhite.App/BlackWhite.App/Properties/StartPage.en.resx
+++ b/BlackWhite.App/BlackWhite.App/Properties/StartPage.en.resx
@@ -153,7 +153,7 @@
     <value>Size</value>
   </data>
   <data name="Start_Button" xml:space="preserve">
-    <value>开始</value>
+    <value>Start</value>
   </data>
   <data name="Timed" xml:space="preserve">
     <value>Timed</value>
